# QvPlugin-SS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SSPlugin.cpp  SSPlugin.hpp
.github/workflows/: build-simpleplugin-qt6.yml  build-simpleplugin.yml
cmake/: shadowsocks-uvw.cmake
common/: CommonHelpers.cpp  CommonHelpers.hpp
core/: EventHandler.cpp  EventHandler.hpp  Serializer.cpp  Serializer.hpp
core/kernel/: SSInstance.cpp  SSInstance.hpp  SSRInstance.cpp
test/: TestParseSS.cpp
ui/: GUIInterface.hpp  SSOutboundEditor.cpp  SSOutboundEditor.hpp  SSOutboundEditor.ui  SSROutboundEditor.cpp  SSROutboundEditor.hpp  SSROutboundEditor.ui  SSSettingsWidget.cpp  SSSettingsWidget.hpp  SSSettingsWidget.ui
